setup - add my profile detail

--- a/profile.html
+++ b/profile.html
@@ -4,5 +4,7 @@
     </head>
     <body>
         <h1>Putthipong Ninwong</h1>
+        <p>My Student ID is 642115032</p>
+        <p>I'm studying Software Engineering in Chiang Mai University.</p>
     </body>
 </html>
