--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
-<a href="about:blank"> To be continued </a>
-<a href="profile.html">View my profile</a>
-<a href="profile.html">View my profile</a>
-
-<a href="jirapat.html">Jirapat profile</a>
-<img src="Jirapat.png" alt="">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <center>
+        <img src="Jirapat.png" alt="">
+        <br></br><br></br>
+        <a href="profile.html">My Profile</a> | 
+        <a href="jirapat.html">Jirapat's Profile</a> | 
+        <a href="camt.html">CAMT Page</a>
+    </center>
+</body>
