--- a/camt.html
+++ b/camt.html
@@ -1,7 +1,11 @@
-<html>
-    <head>
-        <title>CAMT information</title>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CAMT information</title>
+</head>
         <h1>College of Arts, Media and Technology</h1>
         <p>CAMT stands for College of Arts, Media and Technology</p>
         <p>CAMT has a total of 5 courses/branch which are :</p>
