update profile page

--- a/profile.html
+++ b/profile.html
@@ -1,3 +1,10 @@
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Information</title>
+</head>
 <html>
     <head>
         <title>My Profile</title>
@@ -7,4 +14,6 @@
         <p>My Student ID is 642115032</p>
         <p>I'm studying Software Engineering in Chiang Mai University.</p>
     </body>
+    <br></br>
+    <a href="index.html">Go back to Home Page</a>
 </html>
