update friend profile

--- a/jirapat.html
+++ b/jirapat.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    Jirapat Namwong 642115008
-</body>
     <body>
         <h1>Jirapat Namwong</h1>
         <p>Student ID 642115008</p>
         <p>I'm studying Software Engineering in Chiang Mai University.</p>
+        <br></br>
+        <a href="index.html">Back to Home Page</a>
     </body>
 </html>
