add camt logo to index

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
         <a href="profile.html">My Profile</a> | 
         <a href="jirapat.html">Jirapat's Profile</a> | 
         <a href="camt.html">CAMT Page</a>
+        <br></br>
+        <img src="CAMT.jpg" alt="">
     </center>
 </body>
